[gd_scene load_steps=2 format=3 uid="uid://bqnvedkg74db8"]

[ext_resource type="Script" path="res://Scripts/Menu/LevelSelect.gd" id="1_f5vor"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Level1" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0972222
anchor_top = 0.308642
anchor_right = 0.3125
anchor_bottom = 0.435185
text = "Level 1"
script = ExtResource("1_f5vor")
metadata/_edit_use_anchors_ = true

[node name="Level2" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.388889
anchor_top = 0.308642
anchor_right = 0.604167
anchor_bottom = 0.435185
text = "Level 2"
script = ExtResource("1_f5vor")
metadata/_edit_use_anchors_ = true

[node name="Level3" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.673611
anchor_top = 0.308642
anchor_right = 0.888889
anchor_bottom = 0.435185
text = "Level 3"
script = ExtResource("1_f5vor")
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 416.0
offset_top = 32.0
offset_right = 816.0
offset_bottom = 132.0
theme_override_font_sizes/normal_font_size = 40
text = "Select a level:"

[connection signal="pressed" from="Panel/Level1" to="Panel/Level1" method="_on_pressed"]
[connection signal="pressed" from="Panel/Level2" to="Panel/Level1" method="_on_level_2_pressed"]
[connection signal="pressed" from="Panel/Level3" to="Panel/Level1" method="_on_level_3_pressed"]
